--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,67 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.cities {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.info{
+  border-radius: 8px;
+  padding: 5px;
+}
+
+body{
+  font-family: sans-serif;
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+}
+
+input{
+  margin-top: 50px;
+  width: 200px;
+  border: none;
+  padding: 8px;
+  color: gray;
+  border-radius: 15px;
+  padding-left: 20px;
+}
+
+
+.button{
+  border: none;
+  background-color: transparent;
+  font-weight: 600;
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+
+.button:hover{
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.item{
+  text-align: left;
+}
+
+.img{
+  vertical-align: middle;
+  margin: 0;
+}
+
+.box{
+  display: flex;
+}
+
+.text{
+  font-size: 40px;
+  margin: 0;
+}
